Fixed font on mobile

--- a/styles/contact.module.scss
+++ b/styles/contact.module.scss
@@ -9,7 +9,7 @@
   font-size: 36px;
   font-weight: 300;
   @media (max-width: $desktop-breakpoint) {
-    font-size: 24px;
+    font-size: 32px;
     margin: 2.4rem 0;
   }
 }
