--- a/styles/index.module.scss
+++ b/styles/index.module.scss
@@ -57,7 +57,7 @@
   padding-left: 8rem;
   font-weight: 300;
   @media (max-width: $desktop-breakpoint) {
-    font-size: 12px;
+    font-size: 13px;
     padding-left: 2.4rem;
     width: 16rem;
   }
@@ -148,7 +148,8 @@
   @media (max-width: $desktop-breakpoint) {
     margin: 0 0 7.2rem 0;
     text-align: left;
-    font-size: 11px;
+    font-size: 12px;
+    background: none;
   }
 }
 
@@ -163,7 +164,7 @@
   color: black;
   > div {
     //icons
-    font-size: 10px;
+    font-size: 12px;
     letter-spacing: 2px;
     padding: 0 1rem 3rem 1rem;
     text-align: center;
@@ -201,7 +202,7 @@
   letter-spacing: 2px;
   font-size: 24px;
   @media (max-width: $desktop-breakpoint) {
-    margin: 0 0 3rem 0;
+    margin: 0 0 4.2rem 0;
     font-size: 20px;
   }
 }
