--- a/styles/projects.module.scss
+++ b/styles/projects.module.scss
@@ -9,7 +9,7 @@
   font-size: 36px;
   font-weight: 300;
   @media (max-width: $desktop-breakpoint) {
-    font-size: 24px;
+    font-size: 32px;
     margin: 3.2rem 0;
   }
 }
@@ -100,6 +100,7 @@
   }
 }
 .projectDescription {
+  font-family: $Poppins;
   margin: 1.2rem 0 2.4rem 0; //space between title, desc and url
   font-size: 16px;
   color: $grey;
@@ -107,7 +108,7 @@
   width: 50%;
   background: black; //want this text cleared of stars
   @media (max-width: $desktop-breakpoint) {
-    font-size: 12px;
+    font-size: 14px;
     text-align: left;
     width: 100%;
   }
